# mas-cdm

./: .coverage  advancements.md  main.py  plan-MultiAgentEnhancements.MD  pyproject.toml  pytest.ini  review.md
backend/: __init__.py
backend/app/: config.py  main.py
backend/app/api/routes/: agents.py  decisions.py  graph.py  hitl.py  stream.py  tools.py
backend/app/core/: exceptions.py  hitl.py
backend/app/core/agents/: decision_agents.py  evaluator_agents.py  lifecycle.py  registry.py
backend/app/core/communication/: message_broker.py
backend/app/core/graph/: __init__.py  builder.py  executor.py  nodes.py
backend/app/core/memory/: retrieval_tool.py  store.py
backend/app/core/tools/: base.py  (+4 more)
backend/app/models/: domain.py  requests.py  responses.py
backend/app/services/: __init__.py  decision_service.py  process_manager.py  redis_repository.py
backend/app/utils/: helpers.py
backend/examples/: custom_graphs.py
backend/tests/: README.md  __init__.py  conftest.py  test_agent_lifecycle.py  test_agent_registry.py  test_api.py  test_decision_service.py  test_exception_handling.py  test_graph_builder.py  test_hitl.py  test_integration.py  test_memory.py  test_message_broker.py  test_models.py  test_observability.py  test_persistence_factory.py  test_process_manager.py  test_redis_concurrency.py  test_repository.py  test_resilience.py  test_streaming.py  test_tool_manager.py  test_tools.py
backend/tests/fixtures/: agent_mocks.py
backend/tests/helpers/: graph_runner.py
backend/tests/performance/: test_benchmark_agents.py
mas-cdm/: pyproject.toml
(+27 files in other folders)
